# binary_trees

./: 0-binary_tree_node.c  0-node  1-binary_tree_insert_left.c  10-binary_tree_depth.c  100-binary_trees_ancestor.c  101-binary_tree_levelorder.c  11-binary_tree_size.c  113-bst_search.c  114-bst_remove.c  12-binary_tree_leaves.c  121-avl_insert.c  13-binary_tree_nodes.c  130-binary_tree_is_heap.c  131-heap_insert.c  134-heap_sort  14-binary_tree_balance.c  16-binary_tree_is_perfect.c  17-binary_tree_sibling.c  2-binary_tree_insert_right.c  3-binary_tree_delete.c  4-binary_tree_is_leaf.c  5-binary_tree_is_root.c  6-binary_tree_preorder.c  7-binary_tree_inorder.c  8-binary_tree_postorder.c  8-post  9-binary_tree_height.c  CMakeLists.txt  README.md  binary_trees.h
