cmake_minimum_required(VERSION 3.24)
project(binary_trees C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(binary_trees
        0-binary_tree_node.c
        0-main.c
        1-binary_tree_insert_left.c
        1-main.c
        10-binary_tree_depth.c
        10-main.c
        100-binary_trees_ancestor.c
        100-main.c
        101-binary_tree_levelorder.c
        101-main.c
        102-binary_tree_is_complete.c
        102-main.c
        103-binary_tree_rotate_left.c
        103-main.c
        104-binary_tree_rotate_right.c
        104-main.c
        11-binary_tree_size.c
        11-main.c
        110-binary_tree_is_bst.c
        110-main.c
        111-bst_insert.c
        111-main.c
        112-array_to_bst.c
        112-main.c
        113-bst_search.c
        113-main.c
        114-bst_remove.c
        114-main.c
        12-binary_tree_leaves.c
        12-main.c
        120-binary_tree_is_avl.c
        120-main.c
        121-avl_insert.c
        121-main.c
        122-array_to_avl.c
        122-main.c
        123-avl_remove.c
        123-main.c
        124-main.c
        124-sorted_array_to_avl.c
        13-binary_tree_nodes.c
        13-main.c
        130-binary_tree_is_heap.c
        130-main.c
        131-heap_insert.c
        131-main.c
        132-array_to_heap.c
        132-main.c
        133-heap_extract.c
        133-main.c
        134-heap_to_sorted_array.c
        134-main.c
        14-binary_tree_balance.c
        14-main.c
        15-binary_tree_is_full.c
        15-main.c
        16-binary_tree_is_perfect.c
        16-main.c
        17-binary_tree_sibling.c
        17-main.c
        18-binary_tree_uncle.c
        18-main.c
        2-binary_tree_insert_right.c
        2-main.c
        3-binary_tree_delete.c
        3-main.c
        4-binary_tree_is_leaf.c
        4-main.c
        5-binary_tree_is_root.c
        5-main.c
        6-binary_tree_preorder.c
        6-main.c
        7-binary_tree_inorder.c
        7-main.c
        8-binary_tree_postorder.c
        8-main.c
        9-binary_tree_height.c
        9-main.c
        binary_tree_print.c
        binary_trees.h)
